docs/0.17/_sources/api/gammapy.modeling.models.PowerLawSpectralModel.rst.txt
PowerLawSpectralModel
=====================

.. currentmodule:: gammapy.modeling.models

.. autoclass:: PowerLawSpectralModel
   :show-inheritance:

   .. rubric:: Attributes Summary

   .. autosummary::

      ~PowerLawSpectralModel.amplitude
      ~PowerLawSpectralModel.covariance
      ~PowerLawSpectralModel.default_parameters
      ~PowerLawSpectralModel.index
      ~PowerLawSpectralModel.parameters
      ~PowerLawSpectralModel.pivot_energy
      ~PowerLawSpectralModel.reference
      ~PowerLawSpectralModel.tag

   .. rubric:: Methods Summary

   .. autosummary::

      ~PowerLawSpectralModel.__call__
      ~PowerLawSpectralModel.copy
      ~PowerLawSpectralModel.create
      ~PowerLawSpectralModel.energy_flux
      ~PowerLawSpectralModel.evaluate
      ~PowerLawSpectralModel.evaluate_energy_flux
      ~PowerLawSpectralModel.evaluate_error
      ~PowerLawSpectralModel.evaluate_integral
      ~PowerLawSpectralModel.from_dict
      ~PowerLawSpectralModel.from_parameters
      ~PowerLawSpectralModel.integral
      ~PowerLawSpectralModel.inverse
      ~PowerLawSpectralModel.plot
      ~PowerLawSpectralModel.plot_error
      ~PowerLawSpectralModel.spectral_index
      ~PowerLawSpectralModel.to_dict

   .. rubric:: Attributes Documentation

   .. autoattribute:: amplitude
   .. autoattribute:: covariance
   .. autoattribute:: default_parameters
   .. autoattribute:: index
   .. autoattribute:: parameters
   .. autoattribute:: pivot_energy
   .. autoattribute:: reference
   .. autoattribute:: tag

   .. rubric:: Methods Documentation

   .. automethod:: __call__
   .. automethod:: copy
   .. automethod:: create
   .. automethod:: energy_flux
   .. automethod:: evaluate
   .. automethod:: evaluate_energy_flux
   .. automethod:: evaluate_error
   .. automethod:: evaluate_integral
   .. automethod:: from_dict
   .. automethod:: from_parameters
   .. automethod:: integral
   .. automethod:: inverse
   .. automethod:: plot
   .. automethod:: plot_error
   .. automethod:: spectral_index
   .. automethod:: to_dict
